--- a/题解/移动零.md
+++ b/题解/移动零.md
@@ -1,6 +1,6 @@
-## 给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
+## 题目描述：给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
 
-## 请注意，必须在不复制数组的情况下原地对数组进行操作。
+### 请注意，必须在不复制数组的情况下原地对数组进行操作。
 
 **示例 1:**
 
@@ -19,7 +19,7 @@
 
 ---
 
-## 解题思路：将非零元素移到前面，采用双指针，一个记录当前便利的位置，另一个记录非零元素应该移动到的位置
+### 解题思路：将非零元素移到前面，采用双指针，一个记录当前便利的位置，另一个记录非零元素应该移动到的位置
     ```python
         def solution1(nums):
         count = 0
@@ -31,3 +31,5 @@
     ```
 - **说明**:
     - `count`用来记录非零元素应该移动到的位置，最一开始是数组head位置，当发生位置交换之后，向前移动
+    - 时间复杂度均为O(n)
+    - 空间复杂度均为O(1)
