--- a/题解/移动零.md
+++ b/题解/移动零.md
@@ -19,16 +19,20 @@
 
 ---
 
-### 解题思路：将非零元素移到前面，采用双指针，一个记录当前便利的位置，另一个记录非零元素应该移动到的位置
-        ```python
-            def solution1(nums):
-                count = 0
-                for i in range(len(nums)):
-                    if nums[i]:
-                        nums[count], nums[i] = nums[i], nums[count]
-                        count += 1
-                return nums
-        ```
+### 解题思路：将非零元素移到前面，采用双指针，一个记录当前遍历的位置，另一个记录非零元素应该移动到的位置
+
+    ```python
+    def solution1(nums):
+        count = 0
+        for i in range(len(nums)):
+            if nums[i]:
+                nums[count], nums[i] = nums[i], nums[count]
+                count += 1
+        return nums
+    ```
+
+
+
 - **说明**:
     - `count`用来记录非零元素应该移动到的位置，最一开始是数组head位置，当发生位置交换之后，向前移动
     - 时间复杂度均为O(n)
