--- a/题解/两数之和-输入有序数组.md
+++ b/题解/两数之和-输入有序数组.md
@@ -1,4 +1,4 @@
-# 两数之和
+# 两数之和-输入有序数组
 
 ## 题目描述
 
@@ -47,7 +47,7 @@ def Solution1(nums, target):
                 return [i,j]
 ```
 
-- 双指针做法：利用数组已经排好序的性质。两个指针分别指向数组首尾，相加。结果有两种情况，如果相加`> target`,则说明`right`指针指向的数太大，需要左移；如果`< target`,则说明`left`指针指向的数太小，需要右移。如果相等，则返回结果。
+- 双指针做法：利用数组已经排好序的性质。
 
 ```python
 def Solution2(nums, target):
@@ -62,3 +62,5 @@ def Solution2(nums, target):
             right -= 1
     return None
 ```
+- 两个指针分别指向数组首尾，相加。结果有两种情况，如果相加`> target`,则说明`right`指针指向的数太大，需要左移；如果`< target`,则说明`left`指针指向的数太小，需要右移。如果相等，则返回结果。
+-  时间复杂度`O(n)`,空间复杂度`O(1)`。
