--- a/题解/三数之和.md
+++ b/题解/三数之和.md
@@ -80,3 +80,9 @@
         if j < k and self.nums[k] == self.nums[k + 1]:
             k -= 1
 ```
+- 如果`i`与`j`和`k`相加等于0，则将结果添加到`ans`中，然后`j`指针右移，`k`指针左移，继续寻找下一个符合条件的`j`和`k`。
+- 但是在`j`和`k`移动的过程中，如同`i`一样，也应注意避免重复。如果`j`与`j-1`相等，则跳过该`j`，因为`j`与`j-1`对应的结果已经计算过了，避免重复。同理，如果`k`与`k+1`相等，则跳过该`k`，因为`k`与`k+1`对应的结果已经计算过了，避免重复。
+
+## 复杂度分析
+- 时间复杂度：`O(n^2)`，其中 `n` 是数组 `nums` 的长度。排序问题最小的时间复杂度是 `O(nlogn)`，枚举三元组的时间复杂度是 `O(n^2)`，因此总时间复杂度是 `O(n^2+nlogn)=O(n^2)`。
+- 空间复杂度：`O(logn)`或者`O(1)`，其中 `n` 是数组 `nums` 的长度。空间复杂度主要取决于排序的空间复杂度，也可忽略排序的复杂度。
