有效三角形个数

--- a/题解/最接近的三数之和.md
+++ b/题解/最接近的三数之和.md
@@ -29,7 +29,7 @@
 `0`
 
 ### 解题思路
-- 与三数之和一样，还是要固定一个数，然后双指针移动，只不过这次是求和最接近target的值，所以需要用绝对值来比较大小（ox3f并没有用绝对值的方法，但是绝对值我比较好理解，因为最接近表示的是距离，距离为非负值）。
+- 与三数之和一样，还是要固定一个数，然后双指针移动，只不过这次是求和最接近`target`的值，所以需要用绝对值来比较大小（ox3f并没有用绝对值的方法，但是绝对值我比较好理解，因为最接近表示的是距离，距离为非负值）。
 - 但同时还需要维护一个变量`difference`，用来记录最小的差值
 ```python
     self.nums.sort()
