乘积小于k的子数组，无重复最长字串

--- a/题解/滑动窗口/长度最小的子数组.md
+++ b/题解/滑动窗口/长度最小的子数组.md
@@ -2,7 +2,7 @@
 
 ## 题目描述
 
-给定一个含有 n 个正整数的数组和一个正整数 `s` ，找出该数组中满足其**和 `≥ s` 的长度最小**的连续子数组。如果不存在符合条件的连续子数组，返回 `0`。
+给定一个含有 n 个正整数的数组和一个正整数 `s` ，找出该数组中满足其**和 `≥ s` 的长度最小**的连续子数组的长度。如果不存在符合条件的连续子数组，返回 `0`。
 
 示例:
 
@@ -28,7 +28,8 @@
 - 时间复杂度为`O(n^2)`，空间复杂度为`O(1)`。
 
 ## 思路二：滑动窗口
-- 滑动窗口的思想就是两个指针，一个指向窗口的左边界，一个指向窗口的右边界，然后根据题目的要求，移动窗口的左边界或者右边界，直到满足题目的要求。
+- 捕捉题目中的关键词**连续子数组**。
+- 滑动窗口的思想就是两个指针，一个指向窗口的左边界，一个指向窗口的右边界，然后根据题目的要求，移动窗口的左边界或者右边界，直到满足题目的要求。**滑动窗口也可以看成是同向双指针，也为双指针的一种**
 - 为什么本题适用于滑动窗口呢，有两点。首先需要找到的是一个连续子数组，中间不间断，其次数组内的元素与`target`都是正数，也就是说当我们找到了当前最小长度的子数组之后，右窗口就没有必要继续移动了，因为右窗口再向右移动，子数组的和只会更大。
 - 对于这道题，我们可以使用滑动窗口的思想，当窗口的和小于`s`时，移动右边界，当窗口的和大于等于`s`时，移动左边界，直到窗口的和小于`s`，然后更新最小长度。
 ```python
