--- a/题解/两数之和.md
+++ b/题解/两数之和.md
@@ -10,7 +10,8 @@
 ***
 
 #### 哈希表
-使用哈希表存储数组中的元素及其对应的索引，遍历数组，对于每个元素，判断哈希表中是否存在与该元素相加等于目标值的元素，如果存在，则返回两个元素的索引
+- 使用哈希表存储数组中的元素及其对应的索引，遍历数组，对于每个元素，判断哈希表中是否存在与该元素相加等于目标值的元素，如果存在，则返回两个元素的索引。
+- 在 Python 中，集合`set`的操作，如添加元素`add()`、删除元素`remove()`、查找元素是否存在`in`，这些操作的时间复杂度都是`O(1)`的，因为它们依赖于哈希表的实现。
 
 ```python
 def twoSum(self, nums, target):
