数组的最大美丽值

--- a/题解/滑动窗口/找到最长的半重复子字符串.md
+++ b/题解/滑动窗口/找到最长的半重复子字符串.md
@@ -30,19 +30,22 @@ s 是一个半重复字符串。
 ```python
     same += s[right] == s[right - 1]
 ```
+- `ans`的初始值为`1`，因为至少有一个字符的子字符串是半重复的。
+- `right`从`1`开始，因为`s[0]`本身就是一个半重复子字符串，`left`从`0`开始，因为左指针可以移动到`0`位置。判断`right`从那开始，就看最先开始遍历的位置之前的元素是否符合条件。同时对于本题，因为要判断相邻元素是否相等，所以`right`从`1`开始遍历。
+- 在本题中我们不需要额外的空间记录元素出现的次数等，而左右指针的指向即为字串的看
 - 当`same > 1`时，说明出现了两个相邻的相同字符，此时需要将左指针向右移动，直到`s[left] == s[left - 1]`,此时移出两个相邻相等字符中的一个，`same`可以重置为`1`。
 ```python
-if same > 1:
-    if s[left] == s[left - 1]:
-        same -= 1
-    left += 1
+    if same > 1:
+        if s[left] == s[left - 1]:
+            same -= 1
+        left += 1
 ```
 - 当`same > 1`时，说明出现了两个相邻的相同字符，此时需要将左指针向右移动，直到`s[left] == s[left - 1]`,此时移出两个相邻相等的字符，`same`可以重置为`1`。但是编程可以逆向思维，当`s[left] != s[left - 1]`时，一直移动`left`指针，直到`s[left] == s[left - 1]`，此时`same`重置为`1`。
 ```python
-if same > 1:
-    left += 1
-    while s[left] != s[left - 1]:
+    if same > 1:
         left += 1
-    same = 1
+        while s[left] != s[left - 1]:
+            left += 1
+        same = 1
 ```
 - 最后，当每次判断玩`left`指针的移动后，更新答案`ans`，`ans = max(ans, right - left + 1)`。
