将x减到0的最小操作数

--- a/题解/滑动窗口/无重复最长字串.md
+++ b/题解/滑动窗口/无重复最长字串.md
@@ -21,7 +21,7 @@
 
 - 滑动窗口，本题实质上就是判断新加入的元素是否已经存在在滑动窗口中，如果存在，则将窗口的左边界移动到重复元素的下一位，并更新窗口的长度。
 - 判断元素是否在滑动窗口中，可以使用哈希表来存储滑动窗口中的元素，这样查找的时间复杂度就是O(1)了。
-- 但本题并不是如同`两数之和`一样创建一个字典`hashmap = {}`，而是创建了一个集合`set()`，这是因为本题中我们只关心某个字符是否在当前的滑动窗口中，不需要存储字符的其他信息（如索引或频率）。而两数之和出了判断是否存在一个值与`target - num`相等之外，还需要返回这个值在元素组中的索引，因此需要用字典来存储。
+- 但本题并不是如同`两数之和`一样创建一个字典`hashmap = {}`，而是创建了一个集合`set()`，这是因为本题中我们只关心某个字符是否在当前的滑动窗口中，不需要存储字符的其他信息（如索引或频率）。而两数之和除了判断是否存在一个值与`target - num`相等之外，还需要返回这个值在元素组中的索引，因此需要用字典来存储。
 - 编码整体矿建还是滑动窗口，只是判断条件不同。
 ```python
     while s[right] in window:
