咒语和药水的成功对数

--- a/题解/二分查找/正整数和负整数的最大计数.md
+++ b/题解/二分查找/正整数和负整数的最大计数.md
@@ -13,7 +13,7 @@
 解释：共有 `4` 个正整数和 `0` 个负整数。计数得到的最大值是 `4` 。
 
 ## 解题思路
-1. 直接遍历数组，统计正整数和负整数的个数，然后返回较大的那个数。时间复杂度为O(n)，空间复杂度为O(1)。
+1. 直接遍历数组，统计正整数和负整数的个数，然后返回较大的那个数。时间复杂度为`O(n)`，空间复杂度为`O(1)`。
 2. 直接便利数组并没有利用数组`按非递减顺序排列`这个性质。我们可以将问题转换为以下两个问题（`分治`思想）：找到数组中最大负数所在的`index：i`，以及找到数组中最小正数所在的`index：j`，假设数组长度为`n`，则最终应该`return max(i+1, n-j)`。
 ```python
     def find_max_neg(num):
