--- a/题解/二分查找/统计公平数对的数目.md
+++ b/题解/二分查找/统计公平数对的数目.md
@@ -35,3 +35,7 @@
     ans += right - left
 ```
 - 注意使用`bisect_left`和`bisect_right`时，返回的索引值是插入位置，对于返回值，比如说符合条件的`index`是`[0:3]`，那么最终`bisect_left`返回的`left`是`0`，`bisect_right`返回的`right`是`4`，所以`right - left`才是符合条件的数目。
+```python
+    left = bisect_left(nums, lower - x, index)
+    right = bisect_right(nums, upper - x, index)
+```
